--- a/slides1.qmd
+++ b/slides1.qmd
@@ -70,9 +70,12 @@ Monash University <br>
 
 ## Outline
 
-## Follow along
+- Tidy data
+- Organising data into tidy form
+- Handling missing values
+- Reproducible projects
 
-Summary of materials
+## Follow along
 
 This workshop is designed to provide you with every day tools to improve your data analysis efficiency and effectiveness. All the code and examples to reproduce everything discussed are available at [https://dicook.github.io/BAPPENAS_2025/](https://dicook.github.io/BAPPENAS_2025/)
 
@@ -144,7 +147,7 @@ The methods and tools discussed will ensure you can get started and have a proce
 ### Using `%>%` {-}
 
 ```{r read TB incidence data and check, results='hide'}
-tb <- read_csv(here::here("data/TB_notifications_2025-07-22.csv"))
+tb <- read_csv("data/TB_notifications_2025-07-22.csv")
 tb   %>%                                # first we get the tb data
   filter(year == 2023) %>%              # then we focus on the most recent year
   group_by(country) %>%                 # then we group by country
@@ -156,7 +159,7 @@ tb   %>%                                # first we get the tb data
 
 ### Using `|>` {-}
 ```{r read TB incidence data and check base pipe, results='hide'}
-tb <- read_csv(here::here("data/TB_notifications_2025-07-22.csv"))
+tb <- read_csv("data/TB_notifications_2025-07-22.csv")
 tb |>                                  # first we get the tb data
   filter(year == 2023) |>              # then we focus on the most recent year
   group_by(country) |>                 # then we group by country
@@ -170,7 +173,7 @@ tb |>                                  # first we get the tb data
 
 
 ```{r show-results, echo=FALSE}
-tb <- read_csv(here::here("data/TB_notifications_2025-07-22.csv"))
+tb <- read_csv("data/TB_notifications_2025-07-22.csv")
 tb |>                                  # first we get the tb data
   filter(year == 2023) |>              # then we focus on the most recent year
   group_by(country) |>                 # then we group by country
@@ -185,13 +188,13 @@ tb |>                                  # first we get the tb data
 
 ::: columns
 
-::: {.column width="50%"}
+::: {.column width="60%"}
 ![](images/tidy-quote.jpg){width="100%"}
 
 [Illustrations from the Openscapes blog Tidy Data for reproducibility, efficiency, and collaboration by [Julia Lowndes and Allison Horst](https://allisonhorst.com/other-r-fun)]{.smallest}
 :::
 
-::: {.column width="50%"}
+::: {.column width="40%"}
 
 - What do we expect tidy data to look like?
 - maybe easier: what are sources of messiness?
@@ -208,7 +211,7 @@ tb |>                                  # first we get the tb data
 What are the variables? Where are they located?
 
 ```{r example 1 What are the variables, echo=FALSE}
-grad <- read_csv(here::here("data/graduate-programs.csv"))
+grad <- read_csv("data/graduate-programs.csv")
 head(grad[c(2,3,4,6)])
 ```
 
@@ -221,7 +224,7 @@ in the columns, subject, Inst, AvNumPubs, ...
 What's in the column names of this data? What are the experimental units? What are the measured variables?
 
 ```{r example 2 whats in the column names, echo=FALSE}
-genes <- read_csv(here::here("data/genes.csv"))
+genes <- read_csv("data/genes.csv")
 head(genes)
 ```
 
@@ -235,7 +238,7 @@ the experimental design is coded into the variable names, genotype:WI/WM, time:6
 What are the variables? What are the records?
 
 ```{r example 3 what are the variables and records, echo=FALSE}
-melbtemp <- read.fwf(here::here("data/ASN00086282.dly"), 
+melbtemp <- read.fwf("data/ASN00086282.dly", 
    c(11, 4, 2, 4, rep(c(5, 1, 1, 1), 31)), fill=T)
 head(melbtemp[,c(1,2,3,4,seq(5,100,4))])
 ```
@@ -251,7 +254,7 @@ Each row contains the values for one month!
 What are the variables? What are the experimental units?
 
 ```{r example 4 what are the variables and experimental units, echo=FALSE}
-tb <- read_csv(here::here("data/tb.csv"))
+tb <- read_csv("data/tb.csv")
 tail(tb)
 #colnames(tb)
 ```
@@ -278,7 +281,7 @@ pew[1:5, 1:5]
 First few rows:
 
 ```{r example 6 what are the factors measurements and experimental units, echo = FALSE}
-load(here::here("data/french_fries.rda"))
+load("data/french_fries.rda")
 head(french_fries, 4)
 ```
 
@@ -327,7 +330,7 @@ There are various features of messy data that one can observe in practice. Here 
 ## Pivot to long form
 
 ::: columns
-::: {.column width=80%}
+::: {.column width=70%}
 
 ```
 data |> pivot_longer(cols, names_to = "name", values_to = "value", ...)
@@ -339,7 +342,7 @@ data |> pivot_longer(cols, names_to = "name", values_to = "value", ...)
 
 - `col` defines which variables should be combined
 :::
-::: {.column width=20%}
+::: {.column width=30%}
 
 [tidyr cheat sheet](https://rstudio.github.io/cheatsheets/tidyr.pdf)
 
@@ -365,7 +368,7 @@ dframe
 dframe |> pivot_longer(trtA:trtB, names_to="treatment", values_to="outcome")
 ```
 
-## Variable Selectors
+## Variable selectors
 
 - `data |> pivot_longer(cols, names_to = "key", values_to = "value", ...)`
 
@@ -388,13 +391,13 @@ dframe |> pivot_longer(trtA:trtB, names_to="treatment", values_to="outcome")
 New notifications of TB have the form `new_sp_<sex><age group>`:
   
 ```{r read in and process the TB data}
-read_csv(here::here("data/TB_notifications_2025-07-22.csv")) |> 
+read_csv("data/TB_notifications_2025-07-22.csv") |> 
   dplyr::select(country, iso3, year, starts_with("new_sp_")) |>
   na.omit() |>
   head()
 ```
 
-## Pivot Longer: TB notifications
+## Pivot longer: TB notifications
   
 create two new variables: `name` and `value`
 
@@ -402,7 +405,7 @@ create two new variables: `name` and `value`
 - `value` contains all values of the selected variables
   
 ```{r turn TB data into long form}
-tb1 <- read_csv(here::here("data/TB_notifications_2025-07-22.csv")) |> 
+tb1 <- read_csv("data/TB_notifications_2025-07-22.csv") |> 
   dplyr::select(country, iso3, year, starts_with("new_sp_")) |>
   pivot_longer(starts_with("new_sp_")) 
 
@@ -457,35 +460,38 @@ tb3 |> na.omit() |> head()
 
 
 
+The data could be made prettier but it is now in form that can be analysed with standard handling.
 
 
-## Your turn {.inverse}
+## Try this one
 
 Read the genes data from folder `data`. Column names contain data and are kind of messy. 
 
 ```{r}
-genes <- read_csv(here::here("data/genes.csv"))
+genes <- read_csv("data/genes.csv")
 
 names(genes)
 ```
 
 Produce the data frame called `gtidy` as shown below:
 
-```{r code solution to genes wrangling, echo=FALSE}
+```{r}
+#| label: code solution to genes wrangling
+#| code-fold: true
 gtidy <- genes |>
-pivot_longer(-id, names_to="variable", values_to="expr") |>
-separate_wider_delim(variable, names=c("trt", "leftover"), delim = "-") |>
-separate_wider_delim(leftover, names=c("time", "rep"), delim = ".") |>
-mutate(trt = sub("W", "", trt)) |>
-mutate(rep = sub("R", "", rep))
+  pivot_longer(-id, names_to="variable", values_to="expr") |>
+  separate_wider_delim(variable, names=c("trt", "leftover"), 
+                       delim = "-") |>
+  separate_wider_delim(leftover, names=c("time", "rep"), 
+                       delim = ".") |>
+  mutate(trt = sub("W", "", trt)) |>
+  mutate(rep = sub("R", "", rep))
 ```
 
 ```{r}
 head(gtidy)
 ```
 
-<!-- Break into zoom rooms, clock is ticking `r emo::ji("smile")` -->
-<!-- `r countdown::countdown(10)` -->
 
 ## Plot the genes data overlaid with group means
 
@@ -504,7 +510,7 @@ gtidy |>
 ```
 :::
 ::: column
-```{r plot the genes data overlais with group means, echo=FALSE, fig.width=5, fig.height = 5}
+```{r plot the genes data overlaid with group means, echo=FALSE, fig.width=5, fig.height = 5}
 gtidy |> 
   ggplot(aes(x = trt, y = expr, colour=time)) +
   geom_point() +
@@ -519,9 +525,427 @@ gtidy |>
 
 Getting data into tidy form is the singularly most efficient and generalisable way to do data analysis
 
-## Handling missing values {.information-slide .center style="text-align: center;"}
 
-## naniar
+## Initial data analysis (IDE) {.transition-slide .center style="text-align: center;"}
+
+## Objectives
+
+The [**main objective for IDA**]{.monash-blue2} is to intercept any problems in the data that might adversely affect the confirmatory data analysis. 
+
+**_IDA is often unreported_** in the data analysis reports or scientific papers, for various reasons. It might not have been done, or it may have been conducted but there was no space in the paper to report on it. 
+
+[**Good practice**]{.monash-blue2} expects that this work is transparent and repeatable and changeable. 
+
+## Data cleaning 
+
+The purpose of [data cleaning]{.monash-blue2} is to bring data up to a level of quality such that it can reliably be used for the production of statistical models or statements.
+
+A [statistical value chain]{.monash-blue2} is constructed by defining a number of meaningful intermediate data products, for which a chosen set of quality attributes are well described. 
+
+![](images/stats-value-chain.png){width="500px" fig-align="center"}
+
+[Data cleaning in Government Statistics: van der Loo & de Jonge (2018) Statistical Data Cleaning with Applications in R]{.smallest}
+
+## Data screening 
+
+:::: {.columns}
+
+::: {.column width=50%}
+
+::: {.info}
+It's important to check how the data are [understood by the computer]{.monash-blue2}.
+:::
+
+that is, checking for _data type_: 
+
+* Was the date read in as character?
+* Was a factor read in as numeric?
+:::    
+::: {.column width=50%}
+
+```{r, echo = FALSE}
+xlsx_df <- read_excel("data/lecture3-example.xlsx",
+                 col_types = c("text", "date", "text", "numeric"))  |> 
+  mutate(id = as.factor(id), 
+         date = as.character(date),
+         date = as.Date(date, format = "%Y-%d-%m"))
+```
+
+You can visualise the data type with the `visdat` package:
+
+```{r echo = TRUE}
+vis_dat(xlsx_df)
+```
+
+
+:::
+::::
+
+## Example: Checking the data type [(1/2)]{.smallest}
+
+:::: {.columns}
+::: {.column width=50%}
+`lecture3-example.xlsx`
+
+<center>
+<img src="images/lecture3-example.png" width = "500px">
+</center>
+
+:::
+::: {.column width=50%}
+
+```{r, echo = TRUE}
+df <- read_excel("data/lecture3-example.xlsx")
+df
+```
+
+- What problems are there with the computer's interpretation of [data type]{.monash-orange2}?
+- What [context]{.monash-orange2} specific issues indicate incorrect computer interpretation?
+
+:::
+::::
+
+
+
+
+## Example: Checking the data type [(2/2)]{.smallest}
+
+:::: {.columns}
+::: {.column width=50%}
+
+```{r, echo = TRUE}
+df <- read_excel("data/lecture3-example.xlsx", 
+                 col_types = c("text", 
+                               "date", 
+                               "text",
+                               "numeric"))
+
+df |> 
+  mutate(id = as.factor(id),
+         date = ydm(date)) |>
+  mutate(
+         day = day(date),
+         month = month(date),
+         year = year(date)) 
+```
+
+:::
+::: {.column width=50%}
+
+* `id` is now a `factor` instead of `integer`
+* `day`, `month` and `year` are now extracted from the `date`
+* Is it okay now?
+
+::: {style="font-size: 70%;"}
+::: {.fragment}
+* In the United States, it's common to use the date format MM/DD/YYYY <a class="font_small black" href="https://twitter.com/statsgen/status/1257959369448161281">(gasps)</a>  while the rest of the world commonly uses DD/MM/YYYY or better still YYYY/MM/DD.
+:::
+
+
+::: {.fragment}
+
+* It's highly probable that the dates are 1st-5th March and not 3rd of Jan-May.
+
+:::
+
+::: {.fragment}
+
+* You can validate interpretation of temperature using [weather database](https://www.wunderground.com/history/monthly/us/ny/new-york-city/KLGA/date/2010-3).
+
+:::
+:::
+:::
+::::
+
+
+
+## Handling missing values {.transition-slide .center style="text-align: center;"}
+
+## Case study: World development indicators [(1/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=70%}
+
+```{r}
+options(width=80)
+raw_dat <- read_csv("data/world-development-indicators.csv", 
+                    na = "..", n_max = 11935)
+glimpse(raw_dat)
+```
+
+[World Development Indicators (WDI), sourced from the [World Bank Group (2019)](https://databank.worldbank.org/source/world-development-indicators/)]{.smallest}
+
+:::
+::: {.column width=30%}
+
+<br><br>
+
+- What are the data types?
+- What are the variables?
+- What are the observations?
+- Is the data in tidy form?
+
+
+:::
+::::
+
+## Case study: World development indicators [(2/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=60%}
+
+
+```{r}
+country_code_df <- raw_dat  |>
+  distinct(`Country Name`, `Country Code`)  |>
+  rename_all(janitor::make_clean_names)  |>
+  left_join(
+    countrycode::codelist |> select(iso3c, region, continent),
+    by = c("country_code" = "iso3c")
+  )  |>
+  arrange(continent, region) 
+```
+
+::: {style="font-size: 70%;"}
+```{r}
+#| echo: false
+options(width=80)
+glimpse(country_code_df)
+
+country_code_df |> count(continent)
+country_code_df |> count(region)
+
+```
+:::
+:::
+::: {.column width=40%}
+
+<br><br>
+
+- How many countries are included
+- How many continents, regions?
+- Why are there NAs here?
+
+::: {.fragment style="font-size: 70%;"}
+
+```{r}
+country_code_df |> filter(is.na(continent))
+```
+
+:::
+
+:::
+::::
+
+## Case study: World development indicators [(3/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=60%}
+
+
+```{r}
+wdi_vars <- raw_dat  |>
+  select(`Series Name`, `Series Code`) |>
+  distinct() |>
+  rename_all(janitor::make_clean_names) 
+```
+
+::: {style="font-size: 60%; overflow: auto; max-height: 650px;"}
+
+<br>
+
+```{r}
+#| echo: false
+wdi_vars |> gt::gt()
+```
+:::
+
+:::
+::: {.column width=40%}
+
+
+- Analysis will use the short name (`series_code`) for variables. 
+
+- Store full variable name (`series_name`) and short name (`series_code`) in a separate table.
+
+- The `series_code` will be used as the key whenever the full name is needed.
+
+
+:::
+::::
+
+## Case study: World development indicators [(4/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=50%}
+
+
+```{r}
+wdi <- raw_dat  |>
+  select(`Country Code`, `Series Code`, `1969 [YR1969]`:`2018 [YR2018]`) |>
+  rename_all(janitor::make_clean_names) |>
+  pivot_longer(x1969_yr1969:x2018_yr2018,
+               names_to = "year", 
+               values_to = "value") |>
+  mutate(year = as.numeric(str_sub(year, 2, 5)) ) |>
+  pivot_wider(names_from = series_code,
+              values_from = value)
+
+wdi2017 <- wdi  |> filter(year == 2017)
+```
+
+- Organise data into tidy form
+- Check missing value distribution
+
+:::
+::: {.column width=50%}
+
+```{r}
+#| fig-width: 8
+#| fig-height: 7
+#| code-fold: true
+vis_miss(wdi, sort_miss = TRUE)
+```
+
+
+:::
+::::
+
+## Case study: World development indicators [(5/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=20%}
+
+Check missings by 
+
+- variable
+- country
+
+:::
+::: {.column width=50%}
+
+```{r}
+#| fig-width: 8
+#| fig-height: 6
+#| code-fold: true
+gg_miss_var(wdi, show_pct=TRUE)
+```
+
+
+:::
+::: {.column width=30%}
+
+```{r}
+#| code-fold: true
+#| fig-width: 2
+#| fig-height: 8
+#| out-width: 100%
+wdi_cnt_miss <- wdi |> 
+  filter(!is.na(country_code)) |>
+  bind_shadow() |>
+  select(country_code, year,
+         SP.ADO.TFRT_NA:SP.URB.GROW_NA) |>
+  pivot_longer(SP.ADO.TFRT_NA:SP.URB.GROW_NA,
+               names_to="var",
+               values_to="value") |>
+  group_by(country_code) |>
+  count(value) |>
+  mutate(value = fct_recode(value, 
+                            miss="NA",
+                            not="!NA")) |>
+  pivot_wider(names_from = value, values_from = n) |>
+  mutate(p_miss = miss/(miss+not)) |>
+  select(country_code, p_miss)
+wdi_cnt_p <- wdi_cnt_miss |> 
+  ggplot(aes(x=1, y=p_miss, 
+             label=country_code)) +
+  geom_quasirandom() +
+  ylim(c(0,1)) + ylab("Prop miss") 
+ggplotly(wdi_cnt_p)
+```
+
+:::
+::::
+
+## Case study: World development indicators [(6/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=50%}
+
+
+Look at Costa Rica (CRI), most complete country
+
+```{r}
+#| fig-width: 8
+#| fig-height: 6
+#| code-fold: true
+wdi_cri <- wdi |>
+  filter(country_code == "CRI")
+vis_miss(wdi_cri, sort_miss=TRUE)
+```
+:::
+::: {.column width=50%}
+
+To illustrate imputation, we'll show one of the variables, that is relatively complete.
+
+```{r}
+#| fig-width: 6
+#| fig-height: 3
+#| code-fold: true
+wdi_cri_p <- wdi_cri |>
+  ggplot(aes(x=year, y=SE.PRM.CMPT.ZS)) +
+  geom_miss_point() +
+  theme(aspect.ratio=0.5, 
+        legend.position = "none") 
+wdi_cri_p
+```
+
+Impute a few temporal missings using nearest neighbours.
+
+:::
+:::
+
+
+## Case study: World development indicators [(6/7)]{.smallest}
+
+:::: {.columns}
+::: {.column width=50%}
+
+Missings imputed using `imputeTS` using the moving average method. 
+
+```{r}
+#| fig-width: 6
+#| fig-height: 3
+#| code-fold: true
+wdi_cri_v1 <- wdi_cri |>
+  mutate(SE.PRM.CMPT.ZS = na_ma(SE.PRM.CMPT.ZS))
+
+wdi_cri_v1  |>
+  ggplot(aes(x=year, y=SE.PRM.CMPT.ZS)) +
+  geom_point() +
+  geom_smooth(se=F, colour="#D55E00") +
+  theme(aspect.ratio=0.5) 
+```
+
+:::
+::: {.column width=50%}
+
+- Don't have to impute before scrutinizing data
+- What are these numbers supposed to be?
+
+`SE.PRM.CMPT.ZS` is "Primary completion rate, total (% of relevant age group)"
+
+
+[Do we have any problems?]{.monash-orange2}
+
+::: {.fragment}
+Yes. The explanation of the variable suggests the numbers should range between 0-100.
+
+:::
+
+
+:::
+:::
 
 ## Reproducibility, workflow and versioning {.transition-slide .center style="text-align: center;"}
 
@@ -534,6 +958,10 @@ Getting data into tidy form is the singularly most efficient and generalisable w
 - **Transparency**: everything is available for access, resulting in more trustworthy results.
 
 - **Easy to update**: when new data arrives, the report can be automatically updated.
+
+::: {.fragment}
+These slides are an example of a dynamic document. You can extract the code and re-run all the examples. *What I show you, you can do to.*
+:::
 
 ## How might the project look?
 
@@ -576,8 +1004,6 @@ Reproducibility requires more than literate programming. These are:
 
 3. Render document.
 
-Your turn!
-
 :::
 
 
@@ -604,24 +1030,23 @@ Examples:
 - `Mac/Linux: /Users/Documents/workshop`
 - `Internet: https://numbat.space/`
 
+::: {.fragment}
 
-## Absolute and Relative paths
+Because these are different on different systems, you should avoid complications and use **relative** paths, 
 
-- **Absolute**: start from the lowest level, typically a drive letter or root (/)
-  - `/Users/Documents/workshop` ⚠️
+```
+raw_dat <- read_csv("data/world-development-indicators.csv", 
+                    na = "..", n_max = 11935)
+```
 
-- **Relative**: refers to a location that is relative to the current directory. 
-  - `./workshop`
+From my current directory/folder, find the `data` folder and you will find the file `world-development-indicators.csv`.
 
-::: {.callout-important}
-Absolute paths should be avoided since it is extremely unlikely another person will have the same absolute path as you.
 :::
-
 
 ## Work projects
 
-- **Data folder**: contains all the data for the project.
-- **Images/Figures folder**: contains all the external pictures not produced by the code in the qmd file.
+- `data` folder: contains all the data for the project.
+- `images`/`figures` folder**: contains all the external pictures not produced by the code in the qmd file.
 - `.Rproj` file: automatically added when creating an RStudio project (handles the relative paths and working directories).
 - `qmd` file: quarto document
 - Other `R` scripts, etc...
@@ -639,7 +1064,7 @@ Absolute paths should be avoided since it is extremely unlikely another person w
 
 ![](images/quarto.svg){fig-align="center" width="20%" height="20%"}
 
-::: {.f50}
+::: {.smallest}
 [Source: GitHub - RStudio hex stickers](https://github.com/rstudio/hex-stickers)
 :::
 
@@ -654,7 +1079,7 @@ Absolute paths should be avoided since it is extremely unlikely another person w
 
 ![](images/quarto-elements.png){fig-align="center"}
 
-::: {.f50}
+::: {.smallest}
 [Source: Quarto Cheatsheets](https://rstudio.github.io/cheatsheets/quarto.pdf)
 :::
 
@@ -928,27 +1353,25 @@ format:
     toc: true
 ```
 
+## Output to different formats, inc Word, PPT
 
-## HTML result
+:::: {.columns}
+::: {.column width=50%}
+
+**HTML**
 
 ![](images/html-example.png){fig-align="center"}
 
+:::
 
-## PDF result
+::: {.column width=50%}
+
+**PDF**
 
 ![](images/pdf-example.png){fig-align="center"}
 
-
-## [Your turn!]{style="color:#006DAE;"}
-
-:::{.callout-caution}
-## Practice
-
-1. Change the title
-2. Add your name as an author
-3. Use HTML and PDF format
 :::
-
+::::
 
 ## Quarto templates {.transition-slide .center style="text-align: center;"}
 
@@ -1019,11 +1442,13 @@ As shown in recent work [@smith2021], the method is effective.
 
 <!-- PDF and HTML versions, equations and figures cross-reference, code chunks (show and hide) -->
 
-## ⚙️ Quarto Quirks & Power Tips
+## ⚙️ Quarto quirks & power tips
 
----
+:::: {.columns}
 
-### 📐 LaTeX Equation in a Figure Caption
+::: {.column}
+
+📐 LaTeX equation in a figure caption
 
 ```markdown
 ![This figure demonstrates the equation $E = mc^2$.](figure.png){#fig-einstein}
@@ -1033,9 +1458,9 @@ As shown in recent work [@smith2021], the method is effective.
 
 ✅ Works in both **HTML** and **PDF** outputs.
 
----
+::: {.fragment}
 
-### Refer to Another Figure in a Caption
+Refer to another figure in a caption
 
 ```markdown
 ![Here we compare this with Figure @fig-einstein.](comparison.png){#fig-compare}
@@ -1045,9 +1470,13 @@ As shown in recent work [@smith2021], the method is effective.
 
 📌 Make sure the first figure has an ID like `{#fig-einstein}`.
 
----
+:::
+:::
+::: {.column}
 
-### 🔗 Hyperlink in a Table
+::: {.fragment}
+
+🔗 Hyperlink in a table
 
 ```markdown
 | Tool   | Link                              |
@@ -1059,9 +1488,10 @@ As shown in recent work [@smith2021], the method is effective.
 
 ✅ Works for **external links**, local files, and section anchors.
 
----
+:::
+::: {.fragment}
 
-### 🖼 Alt-Text in Figure Chunk
+🖼 Alt-Text in Figure Chunk
 
 ```markdown
 ![Scatterplot of speed vs. distance](cars-plot.png){fig-alt="A scatterplot showing car stopping distances by speed."}
@@ -1069,15 +1499,23 @@ As shown in recent work [@smith2021], the method is effective.
 
 ✅ Use `fig-alt="..."` to improve **accessibility** and support screen readers.
 
+:::
+:::
+::::
 
 ## Resources
+
+::: {style="font-size: 70%;"}
 
 - [R for Data Science (2e)](https://r4ds.hadley.nz)
 - [The tidy tools manifesto](https://cran.r-project.org/web/packages/tidyverse/vignettes/manifesto.html)
 - [Posit cheatsheets](https://posit.co/resources/cheatsheets/)
 - [Wickham (2007) Reshaping data](https://www.jstatsoft.org/article/view/v021i12)
+- [van der Loo and de Jonge (2018). Statistical Data Cleaning with Applications in R](https://onlinelibrary.wiley.com/doi/book/10.1002/9781118897126) 
 - Templates for monash thesis and other documents are [available here](https://github.com/quarto-monash). 
-- git/GitHub for collaborative and versioned work, start with [Happy Git and GitHub for the useR](https://happygitwithr.com)
+- GitHub/git for collaborative and versioned work, start with [Happy Git and GitHub for the useR](https://happygitwithr.com)
+- Material on reproducibility and collaboration adapted from workshop by Jayani Lakshika and Krisanat Anukarnsakulchularp.
+:::
 
 ::: bottom
 <span style="display:inline-block;"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></span><span style="display:inline-block;"> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</span>
